Allow horizontal scrolling of large Scratch blocks (fixes #360)

--- a/csunplugged/static/scss/website.scss
+++ b/csunplugged/static/scss/website.scss
@@ -211,6 +211,7 @@ footer {
 
   .boxed-text-content {
     margin: ($spacer-y * .5) ($spacer-x * .5);
+    overflow: auto;
   }
 }
 
